<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Note-a-Lot</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here..</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add Url</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="you_don_t_have_any_notes_in_here">You don\'t have any notes in here!</string>
    <string name="hello">Hello.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="email_id">Email Id</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_btn">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
<!--    <string name="web_client_id">683935305735-uq1q294o88c57c90qcnqdndb48nrctdc.apps.googleusercontent.com</string>-->
    <string name="web_client_id">683935305735-f2i2io2oroqrhipcm1phs8obfcsmvnvd.apps.googleusercontent.com</string>
    <string name="sign_in_log_in">Sign in/Log in</string>
    <string name="sync">Sync</string>
    <string name="app_theme">App Theme</string>
    <string name="my_website">My Website</string>
    <string name="change_theme">Change Theme</string>
    <string name="this_app_is_on_system_default_theme_choose_your_desired_theme">Choose your desired theme, साफट\'s head?</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="developer_is_blind">Yes, you are right. The developer is the one who is blind and should have his eyes taken out</string>
    <string name="user_is_blind">Jab light theme applied hai fhir bhi click kar rahe ho, bhai apko achromatopsia to nahi hogya hai</string>
    <string name="color_blind_test">https://www.colourblindawareness.org/colour-blindness/types-of-colour-blindness/#:~:text=Monochromacy%20(achromatopsia),see%20in%20greyscale</string>
    <string name="note">Note</string>
    <string name="image">Image</string>
    <string name="web_link">Web Link</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="because_who_needs_memory_anyway">Because who needs memory anyway</string>
    <string name="authenticating">Signing In....</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="sync_data">Sync Data</string>
    <string name="warning_this_will_erase_your_cloud_data_and_replace_it_with_local_data_continue">Warning: This will erase your cloud data and replace it with local data. Continue?</string>
    <string name="erase_cloud_data">Erase cloud data</string>

    <string name="supabase_publishable_api_key">sb_publishable_yDScMeSvhkUSpK98etC31A_mmiU5xp9</string>
    <string name="supabase_project_url">https://rwgxjxvdwfhnyhvnyezw.supabase.co</string>
    <string name="supabase_bucket_name">notesImages</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>


    <string-array name="dummy_note_titles">
        <item>Welcome and Happy new Year</item>

        <item>Oii, cunt!</item>

        <item>One more important thing</item>

    </string-array>

    <string-array name="dummy_note_subtitles">
        <item>I may be late by a day, but the surprise I have in store for you is worth the wait.</item>

        <item>yes you, \nHere is, My Website and My Social\'s</item>

        <item>New update with tons of new features is \nCOMING SOON</item>

    </string-array>

    <string-array name="dummy_note_text">
        <item>A unique surprise crafted just for you awaits within this exclusive link,
            Before anything else, here\'s to a Happy New Year! In case I missed wishing you directly,
            As an additional note.., Fuck you, ENJOY! </item>

        <item>Here is the link for My Website which I wouldn\'t have been able to make
            without the help of my friend AKASH
            (and I bet your old man ain\'t ever laid eyes on something like this, let alone you)\n
            and This is an opportunity I\'m offering you by giving my social\'s
            to personally say "Fuck you" to me as i have said it to you several times
             (mere ko itni baar kahta to mai to nahi sahata)
            aur agar phone par gaali nikalna chaho to you have my number\n\n\n
            \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t- Sky
        </item>

        <item>The new features that are coming soon\n
        ->Online Cloud storage of notes\n
        ->A new password locked folder\n
        ->New scribble feature\n
        ->Voice assistant for reading and writing notes\n
        ->Share notes\n
        ->Take picture directly from camera\n
         and many more..</item>

    </string-array>

    <string-array name="dummy_note_color">

        <item>#FDBE3B</item>
        <item>#FF4842</item>
        <item>#3A52Fc</item>

    </string-array>

    <string-array name="dummy_note_url">

        <item>https://screenmessage.com/happy-new-year-t</item>
        <item>https://skyapps.onrender.com/</item>
        <item>https://screenmessage.com/thisoneisright-t</item>

    </string-array>
</resources>