<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.sky.note_a_lot.activities.MainActivity">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/mainNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorNavViewBackground"
        android:theme="@style/NavigationTheme"
        android:layout_gravity="right"
        app:menu="@menu/nav_view_menu"
        app:headerLayout="@layout/layout_navigation_header"
        app:itemTextColor="@color/colorWhite"
        app:itemIconTint="@color/colorAccent"
        app:itemIconPadding="@dimen/_14sdp"
        app:itemVerticalPadding="@dimen/_1sdp"
        app:itemTextAppearance="@style/NavigationMenuTextStyle"
        tools:ignore="RtlHardcoded" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textMyNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/my_notes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:paddingEnd="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageUser"
            android:layout_width="@dimen/_29sdp"
            android:layout_height="@dimen/_29sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            android:adjustViewBounds="true"
            android:background="@drawable/background_favicon"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_note_a_pic"
            app:layout_constraintBottom_toTopOf="@id/layoutSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />

        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/textMyNotes">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search"
                app:tint="@color/colorSearchIcon" />

            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/search_notes"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHighlight="@color/colorTextHint"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />


        </LinearLayout>

        <ImageView
            android:id="@+id/layoutStyle"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_grid_layout"
            app:layout_constraintBottom_toBottomOf="@id/layoutSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutSearch"
            app:tint="@color/colorSearchIcon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:clipToPadding="false"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_95sdp"
            app:layout_constraintBottom_toBottomOf="@id/bottomBarContainerLayout"
            app:layout_constraintTop_toBottomOf="@id/layoutSearch" />
<!--        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"-->

        <ImageView
            android:id="@+id/imageEmpty"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_130sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/illustration_empty"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSearch"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textEmpty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:text="@string/you_don_t_have_any_notes_in_here"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageEmpty"
            tools:visibility="visible" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottomBarContainerLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:fabAlignmentMode="end"
                app:fabCradleMargin="@dimen/_6sdp"
                app:addElevationShadow="false"
                android:outlineSpotShadowColor="@null"
                android:outlineAmbientShadowColor="@null"
                app:fabCradleVerticalOffset="@dimen/_4sdp"
                android:backgroundTint="@color/colorQuickActionsBackground"
                app:menu="@menu/quick_actions_menu"
                tools:targetApi="p" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imageAddNoteMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:backgroundTint="@color/colorAccent"
                android:background="@drawable/background_add_button"
                android:src="@drawable/ic_add"
                app:maxImageSize="@dimen/_28sdp"
                android:tint="@color/colorPrimary"
                app:layout_anchor="@+id/bottomAppBar"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>